fix bug on iOS with button clicks and input focus/blur

--- a/client/src/components/Button/style.module.scss
+++ b/client/src/components/Button/style.module.scss
@@ -6,6 +6,9 @@
   border: 0;
   padding: 0;
   background-color: transparent;
+  cursor: pointer;
+  -webkit-appearance: none;
+  appearance: none;
 }
 
 /* font - start */
